# prism

./: .gitignore  LICENSE  README.md
assembler/: .gitignore  Cargo.toml
assembler/src/: arguments.rs  lexer.rs  main.rs  parser.rs  reader.rs  writer.rs
examples/: blink.prism  hue.prism  pong.prism
examples/files/: halfs.prism  registers.prism  rgb.prism  simple.prism
fastled/.pio/libdeps/esp12e/ArduinoLogger/: .gitignore  .piopm  README.md  (+1 more)
fastled/examples/esp32_bluetooth_broker/: platformio.ini
fastled/examples/esp32_bluetooth_broker/include/: setup.hxx
fastled/examples/esp32_bluetooth_broker/src/: main.cpp
fastled/examples/esp8266_shell/: platformio.ini
fastled/examples/esp8266_shell/src/: main.cpp
fastled/examples/shell/: platformio.ini
fastled/examples/shell/src/: main.cpp
fastled/include/: newton_fastled.hxx
libnewton/: meson.build
libnewton/c/: meson.build
libnewton/c/include/newton/: core.h  defs.h
libnewton/c/test/: instruction_parsing_from_literal.c  instruction_parsing_from_u16.c  meson.build  register_variable_loading.c
libnewton/cpp/: meson.build
libnewton/cpp/include/newton/: core.hxx  errors.hxx
libnewton/cpp/test/: instruction_parsing_from_u16.cpp  meson.build
libnewton/csharp/newton/core/: Instruction.cs  InstructionOptions.cs  InstructionSet.cs  RawInstruction.cs
libnewton/csharp/newton/error/: InvalidInstructionError.cs  InvalidOptionForInstruction.cs  NewtonError.cs
libnewton/include/: newton.h
libnewton/include/newton/: instruction.h  parser.h  registers.h
libnewton/rust/: Cargo.toml
libnewton/rust/src/: interpreter.rs  lib.rs  tests.rs
libnewton/rust/src/core/: errors.rs  instruction.rs  mod.rs  options.rs  parser.rs  registers.rs  variables.rs
libnewton/rust/src/drivers/: bluetooth.rs
libnewton/test/: instruction_parsing_from_literal.c  instruction_parsing_from_u16.c  meson.build
libnewton/test/files/: instructions.prism
libnewton/tools/: newton_compiler.c
tools/ble_controller/: platformio.ini
tools/ble_controller/include/: setup.hxx
tools/ble_controller/src/: bluetooth.hxx  lights.hxx  main.cpp
tools/mouse_rgb/: Cargo.toml
tools/mouse_rgb/src/: cli.rs  graphics.rs  main.rs  server.rs
tools/newton_compiler/: meson.build  newton_compiler.c
tools/serial_shell/: platformio.ini
tools/serial_shell/src/: main.cpp
tools/socket_emulator/: Cargo.toml
tools/socket_emulator/src/: cli.rs  concurrency.rs  main.rs
tools/socket_emulator/src/threads/: debugger.rs  emulator.rs  mod.rs  newton.rs  server.rs
(+15 files in other folders)
