[package]
name = "socket_emulator"
version = "0.1.0"
edition = "2021"
authors = ["Angel Talero <angelgotalero@outlook.com>"]
description = "LED strip emulator with SDL and communication via sockets"

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
libnewton = { path = "../../libnewton/rust" }
log = { version = "0.4.20", features = ["std"] }
pretty_env_logger = "0.5.0"
sdl2 = "0.36.0"
